syntax = "proto3";

option csharp_namespace = "net.atos.daf.ct2.organizationservice";

package organization;

// The greeting service definition.
service OrganizationService {
  // Sends a greeting
  rpc Create (OrganizationRequest) returns (OrganizationResponse);
}

// The request request.
message OrganizationRequest {
    string OrganizationId= 1;
    string Type=2;
    string Name=3;
    string AddressType=4;
    string AddressStreet=5;
    string AddressStreetNumber=6; 
    string PostalCode=7;    
    string City=8;
    string CountryCode=9;
    int64 ReferencedDate=10;
    bool OptOutStatus=11;
    int64 OptOutStatusChangedDate=12;
    bool IsActive=13;
  }

// The response message containing the greetings.
message OrganizationResponse {
  string Message = 1;

}
